# bn-tic28x-arch

./: CMakeLists.txt  NOTICE.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: architecture.cpp  architecture.h  conditions.h  flags.h  info.cpp  info.h  instructions.cpp  instructions.h  instructions_test.cpp  lift.cpp  lift.h  opcodes.h  registers.h  sizes.h  text.cpp  text.h  text_test.cpp  text_test.h  util.cpp  util.h
